# opengl-framework

./: CMakeLists.txt
demo/: CMakeLists.txt  Scene.cpp  Scene.h  main.cpp
freeglut/: CMakeLists.txt
src/: Camera.cpp  FrameBufferObject.cpp  Light.cpp  Light.h  Mesh.cpp  Mesh.h  MeshLoader.cpp  MeshLoader.h  MeshReaderWriter.cpp  MeshReaderWriter.h  Object3D.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h  TextureReaderWriter.cpp  TextureReaderWriter.h  Viewer.cpp  Viewer.h  openglframework.h
src/maths/: Color.h  Matrix3.h  Matrix4.h  Vector2.h  Vector3.h  Vector4.h
src/shaders/: depth.frag  depth.vert  phong.frag  phong.vert
